@@ -6,14 +6,14 @@ import org.apache.commons.lang3.function.FailableRunnable;
 public class ThreadHelper {
 
     public static Thread runAsync(Runnable r) {
-        var t = new Thread(r);
+        var t = Thread.ofVirtual().unstarted(r);
         t.setDaemon(true);
         t.start();
         return t;
     }
 
     public static Thread runFailableAsync(FailableRunnable<Throwable> r) {
-        var t = new Thread(() -> {
+        var t = Thread.ofVirtual().unstarted(() -> {
             try {
                 r.run();
             } catch (Throwable e) {
